fixed things on footer on tablet view

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -130,6 +130,9 @@ footer{
         font-size: .95rem;
         line-height: 1.2em;
         margin-bottom: 1.5em;
+        .footer-bold{
+            font-weight: bold;
+        }
     }
     .icon-box{
         margin-bottom: 2em;
@@ -209,6 +212,21 @@ footer{
             
         }
         margin-bottom: 15em;
+    }
+
+    .footer-box{
+        display: flex;
+        flex-wrap: wrap;
+        .footer-logo{
+            margin-right: 10em;
+        }
+        .footer-description{
+            width: 60%;
+        }
+        .icon-box{
+            align-self: center;
+            margin-left: 7em;
+        }
     }
 
     
